--- a/sql/sqitch.conf
+++ b/sql/sqitch.conf
@@ -6,3 +6,9 @@
 	# target = db:sqlite:
 	# registry = sqitch
 	# client = sqlite3
+[target "obvm_dev"]
+	uri = db:sqlite:obvm_dev.db
+[target "obvm_test"]
+	uri = db:sqlite:obvm_test.db
+[engine "sqlite"]
+	target = obvm_dev
